# Distributed_SQLite_DB

./: .gitignore  CMakeLists.txt  README.md
src/: CommandParser.cpp  CommandParser.hpp  Coordinator.cpp  Coordinator.hpp  Database.cpp  Database.hpp  Protocol.hpp  Worker.cpp  Worker.hpp  main.cpp
tests/: benchmark_single.cpp  gen_benchmark.cpp  plot_results.py  run_benchmarks.py
